# raytracer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  color.h  hittable.h  hittable_list.h  material.h  materials.h  ray.h  rtweekend.h  sphere.h  vec3.h
include/stb/: stb_image_write.h
src/: CMakeLists.txt  main.cpp
